// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CoverArt Snapshot Tests > displays another album cover 1`] = `
<div>
  <div
    class="flex h-full w-full justify-center"
  >
    <img
      alt="Album Cover"
      class="h-[30vh] w-full max-w-[95%] object-cover md:h-[55vh]"
      src="https://utfs.io/f/E9fJnaKtTy1ba1N97yFrtlodEaJI0m4wGY9KgyPiUvCf8hMp"
    />
  </div>
</div>
`;

exports[`CoverArt Snapshot Tests > displays generic image 1`] = `
<div>
  <div
    class="flex h-full w-full justify-center"
  >
    <img
      alt="Album Cover"
      class="h-[30vh] w-full max-w-[95%] object-cover md:h-[55vh]"
      src="https://utfs.io/f/E9fJnaKtTy1bOclGsk1hB7xMLwUVFDiXypZukQrcnYbgdEv6"
    />
  </div>
</div>
`;
